- Changing final fields to static - use .valueOf instead of creating a new object.